fix text-align center

--- a/widget/css/common.less
+++ b/widget/css/common.less
@@ -8,7 +8,6 @@
 }
 
 .zocial.block {
-  text-align: center;
   display: block;
   margin: 10px 0;
   text-overflow: ellipsis;
